<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <!-- dataタグはlayout直下になければならない。ConstraintLayoutの下はダメ -->
    <data>
        <variable
            name="userInputViewModel"
            type="masaya.release.manage_menu.data.UserInputViewModel"
            />
        <variable
            name="FragmentAdd"
            type="masaya.release.manage_menu.FragmentAdd"
            />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/food_name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/food_name_req"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- 枠線になるのはstyleじゃなくてthemeで指定している。 -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/food_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete|textCapWords"
                    android:singleLine="true">
                    <requestFocus/>
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/category_and_winter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/food_name_label"
                >

                <!-- カテゴリー -->
                <TextView
                    android:id="@+id/food_type_label"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/food_category"
                    android:textAppearance="@style/BodyMaterialAlertDialog.MaterialComponents.Body.Text">
                </TextView>

                <Spinner
                    android:id="@+id/food_type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_margin="@dimen/margin"
                    android:spinnerMode="dropdown"
                    android:contentDescription="@string/food_category"
                    />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/winter_only"
                    style="@style/Widget.MyStyle.CompoundButton.Switch"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/margin"
                    android:checked="false"
                    android:text="@string/winter_only"
                    android:layout_weight="1"/>

            </LinearLayout>

            <!-- 価格 と 販売開始日 -->
            <LinearLayout
                android:id="@+id/price_and_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_and_winter"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/food_price_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:hint="@string/food_price_req"
                    android:layout_weight="1"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/food_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/food_startDate_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:hint="@string/food_startDate_req"
                    android:layout_weight="1"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/food_startDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="date"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!-- 画像 -->
            <TextView
                android:id="@+id/food_image_bmp_name"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_and_date"
            />

            <ImageView
                android:id="@+id/foodimage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="@dimen/margin"
                android:contentDescription="@string/food_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_and_date"
                android:background="@drawable/border"
                android:src="@drawable/no_image"
                />

            <!-- 画像拡大ボタン -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingImageSpreadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_between_elements"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:contentDescription="@string/image_extention"
                app:backgroundTint="@color/gray"
                android:src="@drawable/ic_baseline_photo_size_select_large_24"
                app:layout_constraintTop_toTopOf="@+id/foodimage"
                app:layout_constraintEnd_toEndOf="@+id/foodimage"
                app:tint="@android:color/black" />

            <!-- 画像編集ボタン -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingImageEditButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_between_elements"
                android:layout_marginBottom="@dimen/margin_between_elements"
                android:contentDescription="@string/select_image"
                app:backgroundTint="@color/gray"
                android:src="@drawable/ic_baseline_image_search_24"
                app:layout_constraintBottom_toBottomOf="@+id/foodimage"
                app:layout_constraintEnd_toEndOf="@+id/foodimage"
                app:tint="@android:color/black" />

            <Button
                android:id="@+id/save_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/save_action"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foodimage"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
