<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!-- dataタグはlayout直下になければならない。ConstraintLayoutの下はダメ -->
    <data>
        <variable
            name="ListOrderViewModel"
            type="masaya.release.manage_menu.data.ListOrderViewModel"
            />
        <variable
            name="FragmentList"
            type="masaya.release.manage_menu.FragmentList"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        >

        <!-- 見出し -->
        <TextView
            android:id="@+id/food_name"
            style="@style/Widget.MyStyle.Header"
            android:text="@string/food"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_margin="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/food_name_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_elements"
            app:layout_constraintStart_toEndOf="@id/food_name"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_arrow_down"
            app:tint="@android:color/black"
            android:contentDescription="@string/order"
            />

        <TextView
            android:id="@+id/food_price"
            style="@style/Widget.MyStyle.Header"
            android:layout_below="@+id/food_name"
            android:text="@string/price"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_margin="@dimen/margin"
            app:layout_constraintEnd_toStartOf="@id/food_price_order"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/food_price_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_elements"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_arrow_down"
            app:tint="@android:color/black"
            android:contentDescription="@string/order"
            />

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_marginTop="@dimen/margin_between_elements"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/food_price" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:paddingBottom="200dp"
            android:clipToPadding="false"/>

        <!-- 追加ボタン -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_between_elements"
            android:layout_marginBottom="@dimen/margin_between_elements"
            android:contentDescription="@string/add_new_food"
            android:src="@android:drawable/ic_input_add"
            app:backgroundTint="@color/design_default_color_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>